Make Options immutable; API in single interface

--- a/examples/example-notebooks/MostFrequentBuilds.ipynb
+++ b/examples/example-notebooks/MostFrequentBuilds.ipynb
@@ -153,7 +153,7 @@
     "\n",
     "val builds: List<GradleAttributes> = runBlocking {\n",
     "    val startMilli = startDate.atStartOfDay(ZoneId.of(\"UTC\")).toInstant().toEpochMilli()\n",
-    "    gradleEnterpriseApi.getGradleAttributesFlow(since = startMilli)\n",
+    "    GradleEnterprise.api.getGradleAttributesFlow(since = startMilli)\n",
     "        .filter(buildFilter)\n",
     "        .printProgress { i, build ->\n",
     "            val buildDate = Instant.ofEpochMilli(build.buildStartTime).atOffset(ZoneOffset.UTC)\n",
