--- a/examples/example-notebooks/MostFrequentBuilds.ipynb
+++ b/examples/example-notebooks/MostFrequentBuilds.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "%useLatestDescriptors\n",
-    "%use gradle-enterprise-api-kotlin(version=0.15.1)\n",
+    "%use gradle-enterprise-api-kotlin(version=0.16.0)\n",
     "%use coroutines(v=1.7.1)"
    ]
   },
@@ -153,7 +153,7 @@
     "\n",
     "val builds: List<GradleAttributes> = runBlocking {\n",
     "    val startMilli = startDate.atStartOfDay(ZoneId.of(\"UTC\")).toInstant().toEpochMilli()\n",
-    "    GradleEnterprise.api.getGradleAttributesFlow(since = startMilli)\n",
+    "    GradleEnterpriseApi.buildsApi.getGradleAttributesFlow(since = startMilli)\n",
     "        .filter(buildFilter)\n",
     "        .printProgress { i, build ->\n",
     "            val buildDate = Instant.ofEpochMilli(build.buildStartTime).atOffset(ZoneOffset.UTC)\n",
@@ -409,7 +409,96 @@
    "outputs": [
     {
      "data": {
-      "application/kotlindataframe+json": "{\"nrow\":682,\"ncol\":2,\"columns\":[\"tasks\",\"count\"],\"kotlin_dataframe\":[{\"tasks\":\"app:assembleBrazilDebug\",\"count\":3173},{\"tasks\":\"IDE sync\",\"count\":974},{\"tasks\":\"droid-cli:installDist\",\"count\":205},{\"tasks\":\"clean\",\"count\":147},{\"tasks\":\"feature:order-delivery:customer-satisfaction:impl:compileReleaseSources\",\"count\":92},{\"tasks\":\"infrastructure:design-system:compose:compileReleaseSources\",\"count\":85},{\"tasks\":\"app:assembleBrazilDebug :app:installBrazilDebug\",\"count\":54},{\"tasks\":\"build-plugins:functionalTest --tests rasp.AndroidRaspProtectionPluginTest\",\"count\":51},{\"tasks\":\"analytics-braze:testReleaseUnitTest --tests br.com.ifood.analytics.braze.AppBrazeAnalyticsProviderTest\",\"count\":44},{\"tasks\":\"feature:survey:impl:compileReleaseSources\",\"count\":44},{\"tasks\":\"clean app:assembleBrazilDebug\",\"count\":33},{\"tasks\":\"feature:voucher-android-training:impl:compileReleaseSources\",\"count\":31},{\"tasks\":\"feature:search:impl:compileReleaseSources\",\"count\":30},{\"tasks\":\"droid-cli:run --args ci run-jupyter-notebook\",\"count\":29},{\"tasks\":\"clean :feature:internal-settings:sample:assemble\",\"count\":27},{\"tasks\":\"clean :app:assembleBrazilDebug\",\"count\":24},{\"tasks\":\"protectArtifact\",\"count\":20},{\"tasks\":\"analytics-braze:testReleaseUnitTest --tests br.com.ifood.analytics.braze.AppBrazeAnalyticsProviderTest.sendEvent_featureFlagCanSendEvent_sendEvent\",\"count\":19},{\"tasks\":\"setupDependencies\",\"count\":19},{\"tasks\":\"feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.presentation.plugin.standard.delivery.DeliveryPluginViewModelTest\",\"count\":16}]}",
+      "application/kotlindataframe+json": {
+       "columns": [
+        "tasks",
+        "count"
+       ],
+       "kotlin_dataframe": [
+        {
+         "count": 3173,
+         "tasks": "app:assembleBrazilDebug"
+        },
+        {
+         "count": 974,
+         "tasks": "IDE sync"
+        },
+        {
+         "count": 205,
+         "tasks": "droid-cli:installDist"
+        },
+        {
+         "count": 147,
+         "tasks": "clean"
+        },
+        {
+         "count": 92,
+         "tasks": "feature:order-delivery:customer-satisfaction:impl:compileReleaseSources"
+        },
+        {
+         "count": 85,
+         "tasks": "infrastructure:design-system:compose:compileReleaseSources"
+        },
+        {
+         "count": 54,
+         "tasks": "app:assembleBrazilDebug :app:installBrazilDebug"
+        },
+        {
+         "count": 51,
+         "tasks": "build-plugins:functionalTest --tests rasp.AndroidRaspProtectionPluginTest"
+        },
+        {
+         "count": 44,
+         "tasks": "analytics-braze:testReleaseUnitTest --tests br.com.ifood.analytics.braze.AppBrazeAnalyticsProviderTest"
+        },
+        {
+         "count": 44,
+         "tasks": "feature:survey:impl:compileReleaseSources"
+        },
+        {
+         "count": 33,
+         "tasks": "clean app:assembleBrazilDebug"
+        },
+        {
+         "count": 31,
+         "tasks": "feature:voucher-android-training:impl:compileReleaseSources"
+        },
+        {
+         "count": 30,
+         "tasks": "feature:search:impl:compileReleaseSources"
+        },
+        {
+         "count": 29,
+         "tasks": "droid-cli:run --args ci run-jupyter-notebook"
+        },
+        {
+         "count": 27,
+         "tasks": "clean :feature:internal-settings:sample:assemble"
+        },
+        {
+         "count": 24,
+         "tasks": "clean :app:assembleBrazilDebug"
+        },
+        {
+         "count": 20,
+         "tasks": "protectArtifact"
+        },
+        {
+         "count": 19,
+         "tasks": "analytics-braze:testReleaseUnitTest --tests br.com.ifood.analytics.braze.AppBrazeAnalyticsProviderTest.sendEvent_featureFlagCanSendEvent_sendEvent"
+        },
+        {
+         "count": 19,
+         "tasks": "setupDependencies"
+        },
+        {
+         "count": 16,
+         "tasks": "feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.presentation.plugin.standard.delivery.DeliveryPluginViewModelTest"
+        }
+       ],
+       "ncol": 2,
+       "nrow": 682
+      },
       "text/html": [
        "        <html>\n",
        "        <head>\n",
