Update examples and docs for Maven Central

--- a/examples/example-notebooks/MostFrequentBuilds.ipynb
+++ b/examples/example-notebooks/MostFrequentBuilds.ipynb
@@ -31,7 +31,7 @@
     "`%use` is [line magic](https://github.com/Kotlin/kotlin-jupyter#line-magics) of the Kotlin kernel that can do much more than adding the library. To illustrate, this setup:\n",
     "\n",
     "```kotlin\n",
-    "@file:DependsOn(\"com.github.gabrielfeo:gradle-enterprise-api-kotlin:0.15.1\")\n",
+    "@file:DependsOn(\"com.gabrielfeo:gradle-enterprise-api-kotlin:0.16.2\")\n",
     "\n",
     "import com.gabrielfeo.gradle.enterprise.api.*\n",
     "import com.gabrielfeo.gradle.enterprise.api.model.*\n",
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "%useLatestDescriptors\n",
-    "%use gradle-enterprise-api-kotlin(version=0.16.0)\n",
+    "%use gradle-enterprise-api-kotlin(version=0.16.2)\n",
     "%use coroutines(v=1.7.1)"
    ]
   },
