Improve setup notes in notebook

--- a/examples/example-notebooks/MostFrequentBuilds.ipynb
+++ b/examples/example-notebooks/MostFrequentBuilds.ipynb
@@ -25,25 +25,27 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "79661abe-8aea-48c2-9938-e9452c0161d0",
    "metadata": {},
    "source": [
     "## Setup\n",
     "\n",
-    "`%use` is a [line magic](https://github.com/Kotlin/kotlin-jupyter#line-magics) of the Kotlin kernel that can do much more than adding the library. To illustrate, this setup:\n",
+    "Add libraries to use, via line magics. `%use` is a [line magic](https://github.com/Kotlin/kotlin-jupyter#line-magics) of the Kotlin kernel that can do much more than adding the library. To illustrate, this setup can be replaced with a single line magic.\n",
     "\n",
     "```kotlin\n",
     "@file:DependsOn(\"com.gabrielfeo:gradle-enterprise-api-kotlin:0.16.2\")\n",
     "\n",
     "import com.gabrielfeo.gradle.enterprise.api.*\n",
     "import com.gabrielfeo.gradle.enterprise.api.model.*\n",
+    "import com.gabrielfeo.gradle.enterprise.api.extension.*\n",
     "```\n",
     "\n",
-    "can be entirely replaced by:\n",
+    "is the same as:\n",
     "\n",
     "```\n",
-    "%use gradle-enterprise-api-kotlin\n",
+    "%use gradle-enterprise-api-kotlin(version=0.16.2)\n",
     "```"
    ]
   },
