Revert output changes to notebook

--- a/examples/example-notebooks/MostFrequentBuilds.ipynb
+++ b/examples/example-notebooks/MostFrequentBuilds.ipynb
@@ -368,96 +368,7 @@
    "outputs": [
     {
      "data": {
-      "application/kotlindataframe+json": {
-       "columns": [
-        "tasks",
-        "count"
-       ],
-       "kotlin_dataframe": [
-        {
-         "count": 977,
-         "tasks": "app:assembleBrazilDebug"
-        },
-        {
-         "count": 285,
-         "tasks": "IDE sync"
-        },
-        {
-         "count": 80,
-         "tasks": "droid-cli:installDist"
-        },
-        {
-         "count": 48,
-         "tasks": "feature:order-delivery:waiting-platform-components:impl:compileReleaseSources"
-        },
-        {
-         "count": 17,
-         "tasks": "feature:home:impl:compileReleaseSources"
-        },
-        {
-         "count": 16,
-         "tasks": "feature:chat:impl:testReleaseUnitTest --tests br.com.ifood.chat.presentation.chat.viewModel.ChatViewModelTest.dispatchViewAction_withInitializeAction_andChatCreated_"
-        },
-        {
-         "count": 13,
-         "tasks": "clean"
-        },
-        {
-         "count": 12,
-         "tasks": "analytics-braze:testReleaseUnitTest --tests br.com.ifood.analytics.braze.AppBrazeAnalyticsProviderTest.sendEvent_featureFlagCanSendEvent_sendEvent"
-        },
-        {
-         "count": 12,
-         "tasks": "analytics-braze:testReleaseUnitTest --tests br.com.ifood.analytics.braze.AppBrazeAnalyticsProviderTest"
-        },
-        {
-         "count": 11,
-         "tasks": "app:assembleBrazilDebug :app:installBrazilDebug"
-        },
-        {
-         "count": 11,
-         "tasks": "buildPlugin"
-        },
-        {
-         "count": 11,
-         "tasks": "infrastructure:design-system:global-components-sample:assembleDebug"
-        },
-        {
-         "count": 10,
-         "tasks": "setupDependencies"
-        },
-        {
-         "count": 8,
-         "tasks": "feature:groceries:shopping-list:impl:testReleaseUnitTest --tests br.com.ifood.groceries.shoppinglist.presentation.shoppinglistvoice.ShoppingListVoiceSharedViewModelTest"
-        },
-        {
-         "count": 7,
-         "tasks": "feature:review:evaluating:impl:testReleaseUnitTest --tests br.com.ifood.review.presentation.viewmodel.ReviewViewModelTest"
-        },
-        {
-         "count": 7,
-         "tasks": "build-plugins:test --tests rasp.DexProtectorConfigManagerTest"
-        },
-        {
-         "count": 7,
-         "tasks": "build-plugins:functionalTest --tests rasp.AndroidRaspProtectionPluginTest"
-        },
-        {
-         "count": 7,
-         "tasks": "droid-cli:test --tests br.com.ifood.cli.util.RunCommandShellTest"
-        },
-        {
-         "count": 6,
-         "tasks": "feature:order-delivery:waiting:impl:testReleaseUnitTest"
-        },
-        {
-         "count": 5,
-         "tasks": "feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.presentation.contextcard.mapper.CartModelToMinimizedCartUiModelMapperTest"
-        }
-       ],
-       "ncol": 2,
-       "nrow": 266
-      },
+      "application/kotlindataframe+json": "{\"nrow\":266,\"ncol\":2,\"columns\":[\"tasks\",\"count\"],\"kotlin_dataframe\":[{\"tasks\":\"app:assembleBrazilDebug\",\"count\":977},{\"tasks\":\"IDE sync\",\"count\":285},{\"tasks\":\"droid-cli:installDist\",\"count\":80},{\"tasks\":\"feature:order-delivery:waiting-platform-components:impl:compileReleaseSources\",\"count\":48},{\"tasks\":\"feature:home:impl:compileReleaseSources\",\"count\":17},{\"tasks\":\"feature:chat:impl:testReleaseUnitTest --tests br.com.ifood.chat.presentation.chat.viewModel.ChatViewModelTest.dispatchViewAction_withInitializeAction_andChatCreated_\",\"count\":16},{\"tasks\":\"clean\",\"count\":13},{\"tasks\":\"analytics-braze:testReleaseUnitTest --tests br.com.ifood.analytics.braze.AppBrazeAnalyticsProviderTest.sendEvent_featureFlagCanSendEvent_sendEvent\",\"count\":12},{\"tasks\":\"analytics-braze:testReleaseUnitTest --tests br.com.ifood.analytics.braze.AppBrazeAnalyticsProviderTest\",\"count\":12},{\"tasks\":\"app:assembleBrazilDebug :app:installBrazilDebug\",\"count\":11},{\"tasks\":\"buildPlugin\",\"count\":11},{\"tasks\":\"infrastructure:design-system:global-components-sample:assembleDebug\",\"count\":11},{\"tasks\":\"setupDependencies\",\"count\":10},{\"tasks\":\"feature:groceries:shopping-list:impl:testReleaseUnitTest --tests br.com.ifood.groceries.shoppinglist.presentation.shoppinglistvoice.ShoppingListVoiceSharedViewModelTest\",\"count\":8},{\"tasks\":\"feature:review:evaluating:impl:testReleaseUnitTest --tests br.com.ifood.review.presentation.viewmodel.ReviewViewModelTest\",\"count\":7},{\"tasks\":\"build-plugins:test --tests rasp.DexProtectorConfigManagerTest\",\"count\":7},{\"tasks\":\"build-plugins:functionalTest --tests rasp.AndroidRaspProtectionPluginTest\",\"count\":7},{\"tasks\":\"droid-cli:test --tests br.com.ifood.cli.util.RunCommandShellTest\",\"count\":7},{\"tasks\":\"feature:order-delivery:waiting:impl:testReleaseUnitTest\",\"count\":6},{\"tasks\":\"feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.presentation.contextcard.mapper.CartModelToMinimizedCartUiModelMapperTest\",\"count\":5}]}",
       "text/html": [
        "        <html>\n",
        "        <head>\n",
