--- a/examples/example-notebooks/MostFrequentBuilds.ipynb
+++ b/examples/example-notebooks/MostFrequentBuilds.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "%useLatestDescriptors\n",
-    "%use gradle-enterprise-api-kotlin(version=2023.4.0-alpha03)\n",
+    "%use gradle-enterprise-api-kotlin(version=2023.4.0)\n",
     "%use coroutines(v=1.7.1)\n",
     "\n",
     "val api = GradleEnterpriseApi.newInstance()"
