Update remaining 2023.3.1 mentions

--- a/examples/example-notebooks/MostFrequentBuilds.ipynb
+++ b/examples/example-notebooks/MostFrequentBuilds.ipynb
@@ -35,7 +35,7 @@
     "Add libraries to use, via line magics. `%use` is a [line magic](https://github.com/Kotlin/kotlin-jupyter#line-magics) of the Kotlin kernel that can do much more than adding the library. To illustrate, this setup can be replaced with a single line magic.\n",
     "\n",
     "```kotlin\n",
-    "@file:DependsOn(\"com.gabrielfeo:gradle-enterprise-api-kotlin:2023.3.1\")\n",
+    "@file:DependsOn(\"com.gabrielfeo:gradle-enterprise-api-kotlin:2023.4.0\")\n",
     "\n",
     "import com.gabrielfeo.gradle.enterprise.api.*\n",
     "import com.gabrielfeo.gradle.enterprise.api.model.*\n",
@@ -45,7 +45,8 @@
     "is the same as:\n",
     "\n",
     "```\n",
-    "%use gradle-enterprise-api-kotlin(version=2023.3.1)\n",
+    "%use gradle-enterprise-api-kotlin(version=2023.4.0)\n",
+    "\n",
     "```"
    ]
   },
@@ -380,7 +381,96 @@
    "outputs": [
     {
      "data": {
-      "application/kotlindataframe+json": "{\"nrow\":2901,\"ncol\":2,\"columns\":[\"tasks\",\"count\"],\"kotlin_dataframe\":[{\"tasks\":\"app:assembleBrazilDebug\",\"count\":4677},{\"tasks\":\"kotlinLSPProjectDeps\",\"count\":577},{\"tasks\":\"IDE sync\",\"count\":420},{\"tasks\":\"feature:home:impl:testReleaseUnitTest --tests br.com.ifood.home.*\",\"count\":112},{\"tasks\":\"feature:hits:cards:impl:testReleaseUnitTest --tests br.com.ifood.hits.communitybuytaxonomyitemslist.data.CommunityBuyTaxonomyItemsCardResponseToUiMapperTest\",\"count\":103},{\"tasks\":\"feature:splash:impl:testReleaseUnitTest --tests br.com.ifood.splash.animation.CommemorativeCustomizationDefaultServiceTest\",\"count\":96},{\"tasks\":\"feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.*\",\"count\":92},{\"tasks\":\"feature:chat:core:impl:testReleaseUnitTest --tests br.com.ifood.chat.domain.service.ChatCallForegroundServiceTest\",\"count\":90},{\"tasks\":\"feature:chat:core:impl:testReleaseUnitTest --tests br.com.ifood.chat.domain.service.ChatCallNotificationServiceTest\",\"count\":73},{\"tasks\":\"feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.presentation.plugin.standard.items.item.ReplacementsControllerTest.initReplacements_forceUiModelRemap\",\"count\":70},{\"tasks\":\"feature:checkout:core:impl:testReleaseUnitTest\",\"count\":58},{\"tasks\":\"feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.domain.factory.DefaultCartRemoteConfigsFactoryTest\",\"count\":54},{\"tasks\":\"feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.domain.model.MerchantModelTest\",\"count\":54},{\"tasks\":\"feature:chat:core:impl:testReleaseUnitTest --tests br.com.ifood.chat.domain.service.ChatCallForegroundServiceTest.onStartCommand_rejectCallIntent_stopsService\",\"count\":51},{\"tasks\":\"feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.presentation.plugin.standard.clubpurchase.ClubPurchasePluginViewModelTest\",\"count\":48},{\"tasks\":\"feature:hits:page:impl:testReleaseUnitTest --tests br.com.ifood.hits.page.presentation.HitsPageViewModelTest\",\"count\":48},{\"tasks\":\"feature:discoverycards:impl:testReleaseUnitTest\",\"count\":45},{\"tasks\":\"feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.domain.usecase.club.SetClubSummaryMetadataModelTest.invoke_withValidRulesAndRendering_returnCartWithUpdatedModel\",\"count\":44},{\"tasks\":\"feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.presentation.processor.viewmodel.OrderPoolingProcessorTest.resumeOrderPolling_withPaymentDataEventAndPaymentEventNotAuthorized_handlePaymentActionData\",\"count\":43},{\"tasks\":\"feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.presentation.processor.viewmodel.ClubSubscriptionProcessorTest\",\"count\":41}]}",
+      "application/kotlindataframe+json": {
+       "columns": [
+        "tasks",
+        "count"
+       ],
+       "kotlin_dataframe": [
+        {
+         "count": 4677,
+         "tasks": "app:assembleBrazilDebug"
+        },
+        {
+         "count": 577,
+         "tasks": "kotlinLSPProjectDeps"
+        },
+        {
+         "count": 420,
+         "tasks": "IDE sync"
+        },
+        {
+         "count": 112,
+         "tasks": "feature:home:impl:testReleaseUnitTest --tests br.com.ifood.home.*"
+        },
+        {
+         "count": 103,
+         "tasks": "feature:hits:cards:impl:testReleaseUnitTest --tests br.com.ifood.hits.communitybuytaxonomyitemslist.data.CommunityBuyTaxonomyItemsCardResponseToUiMapperTest"
+        },
+        {
+         "count": 96,
+         "tasks": "feature:splash:impl:testReleaseUnitTest --tests br.com.ifood.splash.animation.CommemorativeCustomizationDefaultServiceTest"
+        },
+        {
+         "count": 92,
+         "tasks": "feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.*"
+        },
+        {
+         "count": 90,
+         "tasks": "feature:chat:core:impl:testReleaseUnitTest --tests br.com.ifood.chat.domain.service.ChatCallForegroundServiceTest"
+        },
+        {
+         "count": 73,
+         "tasks": "feature:chat:core:impl:testReleaseUnitTest --tests br.com.ifood.chat.domain.service.ChatCallNotificationServiceTest"
+        },
+        {
+         "count": 70,
+         "tasks": "feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.presentation.plugin.standard.items.item.ReplacementsControllerTest.initReplacements_forceUiModelRemap"
+        },
+        {
+         "count": 58,
+         "tasks": "feature:checkout:core:impl:testReleaseUnitTest"
+        },
+        {
+         "count": 54,
+         "tasks": "feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.domain.factory.DefaultCartRemoteConfigsFactoryTest"
+        },
+        {
+         "count": 54,
+         "tasks": "feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.domain.model.MerchantModelTest"
+        },
+        {
+         "count": 51,
+         "tasks": "feature:chat:core:impl:testReleaseUnitTest --tests br.com.ifood.chat.domain.service.ChatCallForegroundServiceTest.onStartCommand_rejectCallIntent_stopsService"
+        },
+        {
+         "count": 48,
+         "tasks": "feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.presentation.plugin.standard.clubpurchase.ClubPurchasePluginViewModelTest"
+        },
+        {
+         "count": 48,
+         "tasks": "feature:hits:page:impl:testReleaseUnitTest --tests br.com.ifood.hits.page.presentation.HitsPageViewModelTest"
+        },
+        {
+         "count": 45,
+         "tasks": "feature:discoverycards:impl:testReleaseUnitTest"
+        },
+        {
+         "count": 44,
+         "tasks": "feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.domain.usecase.club.SetClubSummaryMetadataModelTest.invoke_withValidRulesAndRendering_returnCartWithUpdatedModel"
+        },
+        {
+         "count": 43,
+         "tasks": "feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.presentation.processor.viewmodel.OrderPoolingProcessorTest.resumeOrderPolling_withPaymentDataEventAndPaymentEventNotAuthorized_handlePaymentActionData"
+        },
+        {
+         "count": 41,
+         "tasks": "feature:checkout:core:impl:testReleaseUnitTest --tests br.com.ifood.checkout.presentation.processor.viewmodel.ClubSubscriptionProcessorTest"
+        }
+       ],
+       "ncol": 2,
+       "nrow": 2901
+      },
       "text/html": [
        "        <html>\n",
        "        <head>\n",
@@ -1182,7 +1272,7 @@
    ],
    "source": [
     "plot(buildCounts.take(3)) {\n",
-    "    barsH { \n",
+    "    barsH {\n",
     "        x(\"count\")\n",
     "        y(\"tasks\")\n",
     "    }\n",
