--- a/examples/example-notebooks/MostFrequentBuilds.ipynb
+++ b/examples/example-notebooks/MostFrequentBuilds.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Most frequent builds\n",
     "\n",
-    "See what builds are most commonly invoked by developers, e.g. `clean assemble`, `test` or `check`. You can [set up the URL and a token for your Gradle Enterprise instance](https://github.com/gabrielfeo/gradle-enterprise-api-kotlin/blob/main/README.md#setup) and run this notebook as-is for your own project.\n",
+    "See what builds are most commonly invoked by developers, e.g. `clean assemble`, `test` or `check`. You can [set up the URL and a token for your Develocity instance](https://github.com/gabrielfeo/gradle-enterprise-api-kotlin/blob/main/README.md#setup) and run this notebook as-is for your own project.\n",
     "\n",
     "This is a simple example of something you can do with the API. It could bring insights, for example:\n",
     "\n",
@@ -66,7 +66,7 @@
     "%use gradle-enterprise-api-kotlin(version=2023.4.0)\n",
     "%use coroutines(v=1.7.1)\n",
     "\n",
-    "val api = GradleEnterpriseApi.newInstance()"
+    "val api = DevelocityApi.newInstance()"
    ]
   },
   {
