--- a/examples/example-notebooks/MostFrequentBuilds.ipynb
+++ b/examples/example-notebooks/MostFrequentBuilds.ipynb
@@ -9,19 +9,19 @@
    "source": [
     "# Most frequent builds\n",
     "\n",
-    "See what builds are most commonly invoked by developers, e.g. `clean assemble`, `test` or `check`. You can [set up the URL and a token for your Develocity instance](https://github.com/gabrielfeo/gradle-enterprise-api-kotlin/blob/main/README.md#setup) and run this notebook as-is for your own project.\n",
+    "See what builds are most commonly invoked by developers, e.g. `clean assemble`, `test` or `check`. You can [set up the URL and a token for your Develocity instance](https://github.com/gabrielfeo/develocity-api-kotlin/blob/main/README.md#setup) and run this notebook as-is for your own project.\n",
     "\n",
     "This is a simple example of something you can do with the API. It could bring insights, for example:\n",
     "\n",
     "- \"Our developers frequently `clean` together with `assemble`. We should ask them why, because they shouldn't have to. Just an old habit from Maven or are they working around a build issue we don't know about?\"\n",
     "- \"Some are doing `check` builds locally, which we set up to trigger our notably slow legacy tests. We should suggest they run `test` instead, leaving `check` for CI to run.\"\n",
     "\n",
-    "This notebook will take you through using gradle-enterprise-api-kotlin in Jupyter, but it won't get into what a notebook is and how to run it. If you're not familiar with Jupyter:\n",
+    "This notebook will take you through using develocity-api-kotlin in Jupyter, but it won't get into what a notebook is and how to run it. If you're not familiar with Jupyter:\n",
     "\n",
     "- [Kotlin for data science overview](https://kotlinlang.org/docs/data-science-overview.html)\n",
     "- [Kotlin for Jupyter notebooks](https://github.com/cheptsov/kotlin-jupyter-demo/blob/master/index.ipynb)\n",
     "\n",
-    "Note: GitHub preview won't render tables or graphs. I recommend previewing this in the [online Jupyter nbviewer](https://nbviewer.org/github/gabrielfeo/gradle-enterprise-api-kotlin/blob/main/examples/example-notebooks/MostFrequentBuilds.ipynb)."
+    "Note: GitHub preview won't render tables or graphs. I recommend previewing this in the [online Jupyter nbviewer](https://nbviewer.org/github/gabrielfeo/develocity-api-kotlin/blob/main/examples/example-notebooks/MostFrequentBuilds.ipynb)."
    ]
   },
   {
@@ -35,7 +35,7 @@
     "Add libraries to use, via line magics. `%use` is a [line magic](https://github.com/Kotlin/kotlin-jupyter#line-magics) of the Kotlin kernel that can do much more than adding the library. To illustrate, this setup can be replaced with a single line magic.\n",
     "\n",
     "```kotlin\n",
-    "@file:DependsOn(\"com.gabrielfeo:gradle-enterprise-api-kotlin:2023.4.0\")\n",
+    "@file:DependsOn(\"com.gabrielfeo:develocity-api-kotlin:2023.4.0\")\n",
     "\n",
     "import com.gabrielfeo.gradle.enterprise.api.*\n",
     "import com.gabrielfeo.gradle.enterprise.api.model.*\n",
@@ -45,7 +45,7 @@
     "is the same as:\n",
     "\n",
     "```\n",
-    "%use gradle-enterprise-api-kotlin(version=2023.4.0)\n",
+    "%use develocity-api-kotlin(version=2023.4.0)\n",
     "\n",
     "```"
    ]
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "%useLatestDescriptors\n",
-    "%use gradle-enterprise-api-kotlin(version=2023.4.0)\n",
+    "%use develocitytlin(version=2023.4.0)\n",
     "%use coroutines(v=1.7.1)\n",
     "\n",
     "val api = DevelocityApi.newInstance()"
@@ -82,9 +82,9 @@
     "response using the `models` parameter. \"Models\" are build details that would come from other endpoints. For example, \n",
     "requesting models=[gradleAttributes][3] brings data from `/api/builds/{id}/gradle-attributes` in the same response.\n",
     "\n",
-    "[1]: https://gabrielfeo.github.io/gradle-enterprise-api-kotlin/library/com.gabrielfeo.gradle.enterprise.api.extension/get-builds-flow.html\n",
+    "[1]: https://gabrielfeo.github.io/develocity-api-kotlin/library/com.gabrielfeo.gradle.enterprise.api.extension/get-builds-flow.html\n",
     "[2]: https://docs.gradle.com/enterprise/api-manual/#advanced_search_syntax \n",
-    "[3]: https://gabrielfeo.github.io/gradle-enterprise-api-kotlin/library/com.gabrielfeo.gradle.enterprise.api\n",
+    "[3]: https://gabrielfeo.github.io/develocity-api-kotlin/library/com.gabrielfeo.gradle.enterprise.api\n",
     ".model/-build-model-name/gradle-attributes/index.html"
    ]
   },
