--- a/examples/example-notebooks/MostFrequentBuilds.ipynb
+++ b/examples/example-notebooks/MostFrequentBuilds.ipynb
@@ -37,9 +37,9 @@
     "```kotlin\n",
     "@file:DependsOn(\"com.gabrielfeo:develocity-api-kotlin:2023.4.0\")\n",
     "\n",
-    "import com.gabrielfeo.gradle.enterprise.api.*\n",
-    "import com.gabrielfeo.gradle.enterprise.api.model.*\n",
-    "import com.gabrielfeo.gradle.enterprise.api.extension.*\n",
+    "import com.gabrielfeo.develocity.api.*\n",
+    "import com.gabrielfeo.develocity.api.model.*\n",
+    "import com.gabrielfeo.develocity.api.extension.*\n",
     "```\n",
     "\n",
     "is the same as:\n",
@@ -82,9 +82,9 @@
     "response using the `models` parameter. \"Models\" are build details that would come from other endpoints. For example, \n",
     "requesting models=[gradleAttributes][3] brings data from `/api/builds/{id}/gradle-attributes` in the same response.\n",
     "\n",
-    "[1]: https://gabrielfeo.github.io/develocity-api-kotlin/library/com.gabrielfeo.gradle.enterprise.api.extension/get-builds-flow.html\n",
+    "[1]: https://gabrielfeo.github.io/develocity-api-kotlin/library/com.gabrielfeo.develocity.api.extension/get-builds-flow.html\n",
     "[2]: https://docs.gradle.com/enterprise/api-manual/#advanced_search_syntax \n",
-    "[3]: https://gabrielfeo.github.io/develocity-api-kotlin/library/com.gabrielfeo.gradle.enterprise.api\n",
+    "[3]: https://gabrielfeo.github.io/develocity-api-kotlin/library/com.gabrielfeo.develocity.api\n",
     ".model/-build-model-name/gradle-attributes/index.html"
    ]
   },
