Fix use statement

--- a/examples/example-notebooks/MostFrequentBuilds.ipynb
+++ b/examples/example-notebooks/MostFrequentBuilds.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "%useLatestDescriptors\n",
-    "%use develocitytlin(version=2023.4.0)\n",
+    "%use develocity-api-kotlin(version=2023.4.0)\n",
     "%use coroutines(v=1.7.1)\n",
     "\n",
     "val api = DevelocityApi.newInstance()"
