Ensure examples fail eagerly if 0 builds

--- a/examples/example-notebooks/MostFrequentBuilds.ipynb
+++ b/examples/example-notebooks/MostFrequentBuilds.ipynb
@@ -121,7 +121,8 @@
     "    }.toList(LinkedList())\n",
     "}\n",
     "\n",
-    "println(\"${builds.size} builds\")"
+    "println(\"${builds.size} builds\")\n",
+    "check(builds.isNotEmpty()) { \"No builds found. Adjust query and try again.\" }"
    ]
   },
   {
