Improve examples testing (#309)
- Simplify queries to make it easier to test against fresh instances,
e.g. with no builds tagged for `tag:local`.
- Ensure examples fail if 0 builds. Before, script and project examples
would skip code such as `List.map` logic, hiding potential issues when
testing. The notebook example would fail later in the plotting step with
a non-obvious message:

```
java.lang.IllegalStateException: Column 'count' not found among [tasks].
```

---------

Co-authored-by: Clay Johnson <cjohnson@gradle.com>

--- a/examples/example-notebooks/MostFrequentBuilds.ipynb
+++ b/examples/example-notebooks/MostFrequentBuilds.ipynb
@@ -114,14 +114,15 @@
     "val builds: List<GradleAttributes> = runBlocking {\n",
     "    api.buildsApi.getBuildsFlow(\n",
     "        fromInstant = 0,\n",
-    "        query = \"\"\"buildStartTime>-7d tag:local\"\"\",\n",
+    "        query = \"\"\"buildStartTime>-7d\"\"\",\n",
     "        models = listOf(BuildModelName.gradleAttributes),\n",
     "    ).map {\n",
     "        it.models!!.gradleAttributes!!.model!!\n",
     "    }.toList(LinkedList())\n",
     "}\n",
     "\n",
-    "println(\"${builds.size} builds\")"
+    "println(\"${builds.size} builds\")\n",
+    "check(builds.isNotEmpty()) { \"No builds found. Adjust query and try again.\" }"
    ]
   },
   {
