Fix examples for servers with varied build tools
(cherry picked from commit eaf9882a55a10230f6e5438387d561299c4f93ea)

--- a/examples/example-notebooks/MostFrequentBuilds.ipynb
+++ b/examples/example-notebooks/MostFrequentBuilds.ipynb
@@ -114,7 +114,7 @@
     "val builds: List<GradleAttributes> = runBlocking {\n",
     "    api.buildsApi.getBuildsFlow(\n",
     "        fromInstant = 0,\n",
-    "        query = \"\"\"buildStartTime>-7d\"\"\",\n",
+    "        query = \"\"\"buildStartTime>-7d buildTool:gradle\"\"\",\n",
     "        models = listOf(BuildModelName.gradleAttributes),\n",
     "    ).map {\n",
     "        it.models!!.gradleAttributes!!.model!!\n",
