--- a/examples/example-notebooks/MostFrequentBuilds.ipynb
+++ b/examples/example-notebooks/MostFrequentBuilds.ipynb
@@ -121,7 +121,7 @@
     "    }.toList(LinkedList())\n",
     "}\n",
     "\n",
-    "println(\"${builds.size} builds\")\n",
+    "println(\"Collected ${builds.size} builds from the API\")\n",
     "check(builds.isNotEmpty()) { \"No builds found. Adjust query and try again.\" }"
    ]
   },
@@ -840,9 +840,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "%use kandy(v=0.6.0)"
-   ]
+   "source": "%use kandy(v=0.6.0)"
   },
   {
    "cell_type": "code",
